--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -1006,7 +1006,7 @@
       <div class="card grid-span-6">
         <h3>Reliable internet (rural-friendly): Starlink (Portable + Standard Kit)</h3>
         <p class="small">
-          <a href="https://www.amazon.ca/dp/B0DJHQCMWR?linkCode=ll2&tag=kitchengearla-20&linkId=5c7c1938e275e478f96c272f31da1b72&ref_=as_li_ss_tl"
+          <a href="https://www.amazon.ca/dp/B0DJHQCMWR?th=1&linkCode=ll2&tag=kitchengearla-20"
              rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
         </p>
         <ul class="specs">
@@ -1015,7 +1015,7 @@
         </ul>
         <div class="cta-row">
           <a class="btn btn-primary"
-             href="https://www.amazon.ca/dp/B0DJHQCMWR?linkCode=ll2&tag=kitchengearla-20&linkId=5c7c1938e275e478f96c272f31da1b72&ref_=as_li_ss_tl"
+             href="https://www.amazon.ca/dp/B0DJHQCMWR?th=1&linkCode=ll2&tag=kitchengearla-20"
              rel="nofollow sponsored noopener" target="_blank">Check Starlink price</a>
         </div>
       </div>
@@ -1068,6 +1068,24 @@
           <a class="btn btn-primary"
              href="https://www.amazon.ca/COSTWAY-Conditioner-Inverter-208-230V-12000BTU/dp/B0CC2MVD7G?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=7dbe9e0490ed97e3f4cb4d41e5685e7b&ref_=as_li_ss_tl"
              rel="nofollow sponsored noopener" target="_blank">Check COSTWAY price</a>
+        </div>
+      </div>
+
+      <!-- NEW: Water pump (transfer / utility) -->
+      <div class="card grid-span-6">
+        <h3>Water (temporary): Portable electric water transfer pump</h3>
+        <p class="small">
+          <a href="https://www.amazon.ca/dp/B0CGWMWJQ7?th=1&linkCode=ll2&tag=kitchengearla-20"
+             rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
+        </p>
+        <ul class="specs">
+          <li><strong>Best for:</strong> transferring water between tanks, filling/rinsing, temporary site setup</li>
+          <li><strong>Watch-outs:</strong> not a full “house water pressure” system, check hose fittings, freezing protection, potable-water compatibility</li>
+        </ul>
+        <div class="cta-row">
+          <a class="btn btn-primary"
+             href="https://www.amazon.ca/dp/B0CGWMWJQ7?th=1&linkCode=ll2&tag=kitchengearla-20"
+             rel="nofollow sponsored noopener" target="_blank">Check water pump</a>
         </div>
       </div>
 
