--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -1002,8 +1002,22 @@
     </p>
 
     <div class="grid">
-      <!-- UPDATED: Starlink link (direct product URL to avoid 404) -->
+      <!-- Starlink -->
       <div class="card grid-span-6">
+        <figure class="card-media">
+          <picture>
+            <source type="image/webp"
+              srcset="/assets/images/addons/prefab-addon-starlink-kit-800x800.webp 800w,
+                      /assets/images/addons/prefab-addon-starlink-kit-1600x1600.webp 1600w"
+              sizes="(max-width: 979px) 100vw, 50vw">
+            <img
+              src="/assets/images/addons/prefab-addon-starlink-kit-800x800.webp"
+              width="800" height="800"
+              alt="Starlink kit for rural internet at a prefab home"
+              loading="lazy" decoding="async">
+          </picture>
+        </figure>
+
         <h3>Reliable internet (rural-friendly): Starlink (Portable + Standard Kit)</h3>
         <p class="small">
           <a href="https://www.amazon.ca/dp/B0DJHQCMWR?th=1&linkCode=ll2&tag=kitchengearla-20"
@@ -1020,7 +1034,22 @@
         </div>
       </div>
 
+      <!-- Jackery -->
       <div class="card grid-span-6">
+        <figure class="card-media">
+          <picture>
+            <source type="image/webp"
+              srcset="/assets/images/addons/prefab-addon-jackery-explorer-800x800.webp 800w,
+                      /assets/images/addons/prefab-addon-jackery-explorer-1600x1600.webp 1600w"
+              sizes="(max-width: 979px) 100vw, 50vw">
+            <img
+              src="/assets/images/addons/prefab-addon-jackery-explorer-800x800.webp"
+              width="800" height="800"
+              alt="Jackery Explorer portable power station"
+              loading="lazy" decoding="async">
+          </picture>
+        </figure>
+
         <h3>Backup / temporary power: Jackery Explorer (high-capacity)</h3>
         <p class="small">
           <a href="https://www.amazon.ca/Jackery-Explorer-Temperature-Resistant-Condition-Emergencies/dp/B0DHGMDJW2?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=c0ebb4ef4e0b90ef2fc00709c14be86e&ref_=as_li_ss_tl"
@@ -1037,7 +1066,22 @@
         </div>
       </div>
 
+      <!-- Senville -->
       <div class="card grid-span-6">
+        <figure class="card-media">
+          <picture>
+            <source type="image/webp"
+              srcset="/assets/images/addons/prefab-addon-senville-mini-split-800x800.webp 800w,
+                      /assets/images/addons/prefab-addon-senville-mini-split-1600x1600.webp 1600w"
+              sizes="(max-width: 979px) 100vw, 50vw">
+            <img
+              src="/assets/images/addons/prefab-addon-senville-mini-split-800x800.webp"
+              width="800" height="800"
+              alt="Senville 12,000 BTU mini-split heat pump"
+              loading="lazy" decoding="async">
+          </picture>
+        </figure>
+
         <h3>Heating + cooling: Senville 12,000 BTU mini-split</h3>
         <p class="small">
           <a href="https://www.amazon.ca/Senville-SENA-12HF-Conditioner-Ductless-Energy/dp/B00ESNCW38?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=bc2ab89feaeea868b6877a97ef0fb5f6&ref_=as_li_ss_tl"
@@ -1054,7 +1098,22 @@
         </div>
       </div>
 
+      <!-- COSTWAY -->
       <div class="card grid-span-6">
+        <figure class="card-media">
+          <picture>
+            <source type="image/webp"
+              srcset="/assets/images/addons/prefab-addon-costway-mini-split-800x800.webp 800w,
+                      /assets/images/addons/prefab-addon-costway-mini-split-1600x1600.webp 1600w"
+              sizes="(max-width: 979px) 100vw, 50vw">
+            <img
+              src="/assets/images/addons/prefab-addon-costway-mini-split-800x800.webp"
+              width="800" height="800"
+              alt="COSTWAY 12,000 BTU mini-split air conditioner"
+              loading="lazy" decoding="async">
+          </picture>
+        </figure>
+
         <h3>Heating + cooling alternative: COSTWAY 12,000 BTU mini-split</h3>
         <p class="small">
           <a href="https://www.amazon.ca/COSTWAY-Conditioner-Inverter-208-230V-12000BTU/dp/B0CC2MVD7G?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=7dbe9e0490ed97e3f4cb4d41e5685e7b&ref_=as_li_ss_tl"
@@ -1071,8 +1130,22 @@
         </div>
       </div>
 
-      <!-- NEW: Water pump (transfer / utility) -->
+      <!-- Water pump -->
       <div class="card grid-span-6">
+        <figure class="card-media">
+          <picture>
+            <source type="image/webp"
+              srcset="/assets/images/addons/prefab-addon-water-transfer-pump-800x800.webp 800w,
+                      /assets/images/addons/prefab-addon-water-transfer-pump-1600x1600.webp 1600w"
+              sizes="(max-width: 979px) 100vw, 50vw">
+            <img
+              src="/assets/images/addons/prefab-addon-water-transfer-pump-800x800.webp"
+              width="800" height="800"
+              alt="Portable electric water transfer pump for a temporary prefab setup"
+              loading="lazy" decoding="async">
+          </picture>
+        </figure>
+
         <h3>Water (temporary): Portable electric water transfer pump</h3>
         <p class="small">
           <a href="https://www.amazon.ca/dp/B0CGWMWJQ7?th=1&linkCode=ll2&tag=kitchengearla-20"
@@ -1089,8 +1162,22 @@
         </div>
       </div>
 
-      <!-- NEW: EcoFlow solar panel (direct product URL) -->
+      <!-- EcoFlow solar panel -->
       <div class="card grid-span-6">
+        <figure class="card-media">
+          <picture>
+            <source type="image/webp"
+              srcset="/assets/images/addons/prefab-addon-ecoflow-solar-panel-800x800.webp 800w,
+                      /assets/images/addons/prefab-addon-ecoflow-solar-panel-1600x1600.webp 1600w"
+              sizes="(max-width: 979px) 100vw, 50vw">
+            <img
+              src="/assets/images/addons/prefab-addon-ecoflow-solar-panel-800x800.webp"
+              width="800" height="800"
+              alt="EcoFlow adjustable waterproof solar panel"
+              loading="lazy" decoding="async">
+          </picture>
+        </figure>
+
         <h3>Solar (portable): EcoFlow Adjustable / Waterproof Solar Panel</h3>
         <p class="small">
           <a href="https://www.amazon.ca/dp/B09YV6P8VN?linkCode=ll2&tag=kitchengearla-20&linkId=729e99de6318af96e26ef74e50c30607&ref_=as_li_ss_tl"
@@ -1107,8 +1194,22 @@
         </div>
       </div>
 
-      <!-- UPDATED EcoFlow block -->
+      <!-- EcoFlow DELTA Pro -->
       <div class="card grid-span-12">
+        <figure class="card-media">
+          <picture>
+            <source type="image/webp"
+              srcset="/assets/images/addons/prefab-addon-ecoflow-delta-pro-800x800.webp 800w,
+                      /assets/images/addons/prefab-addon-ecoflow-delta-pro-1600x1600.webp 1600w"
+              sizes="(max-width: 979px) 100vw, 100vw">
+            <img
+              src="/assets/images/addons/prefab-addon-ecoflow-delta-pro-800x800.webp"
+              width="800" height="800"
+              alt="EcoFlow DELTA Pro high-capacity power station for backup power"
+              loading="lazy" decoding="async">
+          </picture>
+        </figure>
+
         <h3>Premium off-grid / serious backup: EcoFlow DELTA Pro (high-capacity)</h3>
         <p class="small">
           <a href="https://www.amazon.ca/EF-ECOFLOW-3600-4500W-Expandable-Generator/dp/B0BW8PT9TD?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=ab7f5565174d8282d2c5a97099d144df&ref_=as_li_ss_tl"
