--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -1292,23 +1292,37 @@
     <div class="wrap"><div class="sep"></div></div>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap footer-grid">
-      <div>
-        <strong>PrefabHomesCanada</strong>
-        <p class="small footerBlurb">
-          A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
-        </p>
-      </div>
-      <div>
-        <p class="small footerLinks">
-          <a href="#disclosure">Disclosure</a> ·
-          <a href="#faq">FAQ</a> ·
-          <a href="#real-costs">Real costs</a>
-        </p>
-      </div>
+  <footer class="site-footer" role="contentinfo">
+  <div class="wrap footer-grid">
+    <div class="footerBrand">
+      <strong class="footerName">PrefabHomesCanada</strong>
+      <p class="small footerBlurb">
+        A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
+      </p>
     </div>
-  </footer>
+
+    <nav class="footerNav" aria-label="Footer">
+      <p class="footerTitle small">On this page</p>
+      <ul class="footerLinksList">
+        <li><a href="#disclosure">Disclosure</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#real-costs">Real costs</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <div class="wrap footerBottom">
+    <div class="footerLegal small">
+      <span>© <span id="y"></span> PrefabHomesCanada</span>
+      <span class="footerDot" aria-hidden="true">•</span>
+      <a href="/privacy-policy/">Privacy policy</a>
+      <span class="footerDot" aria-hidden="true">•</span>
+      <span class="footerMuted">Prices/availability can change. Verify listing details before purchase.</span>
+    </div>
+
+    <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
+  </div>
+</footer>
 
   <script src="/assets/js/site.js" defer></script>
 </body>
