--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -993,7 +993,7 @@
     </section>
 
     <!-- ESSENTIAL ADD-ONS -->
-    <section id="add-ons" class="section anchor">
+<section id="add-ons" class="section anchor">
   <div class="wrap">
     <h2>Essential add-ons for living in a prefab home (Canada-focused)</h2>
     <p>
@@ -1007,13 +1007,13 @@
         <figure class="card-media">
           <picture>
             <source type="image/webp"
-              srcset="/assets/images/addons/prefab-addon-starlink-kit-800x800.webp 800w,
-                      /assets/images/addons/prefab-addon-starlink-kit-1600x1600.webp 1600w"
+              srcset="/assets/images/addons/starlink-portable-standard-kit-satellite-internet-prefab-home-canada-800x800.webp 800w,
+                      /assets/images/addons/starlink-portable-standard-kit-satellite-internet-prefab-home-canada-1600x1600.webp 1600w"
               sizes="(max-width: 979px) 100vw, 50vw">
             <img
-              src="/assets/images/addons/prefab-addon-starlink-kit-800x800.webp"
+              src="/assets/images/addons/starlink-portable-standard-kit-satellite-internet-prefab-home-canada-800x800.webp"
               width="800" height="800"
-              alt="Starlink kit for rural internet at a prefab home"
+              alt="Starlink portable satellite internet kit for rural prefab home in Canada"
               loading="lazy" decoding="async">
           </picture>
         </figure>
@@ -1039,13 +1039,13 @@
         <figure class="card-media">
           <picture>
             <source type="image/webp"
-              srcset="/assets/images/addons/prefab-addon-jackery-explorer-800x800.webp 800w,
-                      /assets/images/addons/prefab-addon-jackery-explorer-1600x1600.webp 1600w"
+              srcset="/assets/images/addons/jackery-explorer-high-capacity-portable-power-station-prefab-home-canada-800x800.webp 800w,
+                      /assets/images/addons/jackery-explorer-high-capacity-portable-power-station-prefab-home-canada-1600x1600.webp 1600w"
               sizes="(max-width: 979px) 100vw, 50vw">
             <img
-              src="/assets/images/addons/prefab-addon-jackery-explorer-800x800.webp"
+              src="/assets/images/addons/jackery-explorer-high-capacity-portable-power-station-prefab-home-canada-800x800.webp"
               width="800" height="800"
-              alt="Jackery Explorer portable power station"
+              alt="Jackery Explorer high-capacity portable power station for temporary backup power at a prefab home in Canada"
               loading="lazy" decoding="async">
           </picture>
         </figure>
@@ -1071,13 +1071,13 @@
         <figure class="card-media">
           <picture>
             <source type="image/webp"
-              srcset="/assets/images/addons/prefab-addon-senville-mini-split-800x800.webp 800w,
-                      /assets/images/addons/prefab-addon-senville-mini-split-1600x1600.webp 1600w"
+              srcset="/assets/images/addons/senville-12000-btu-mini-split-heat-pump-prefab-home-canada-800x800.webp 800w,
+                      /assets/images/addons/senville-12000-btu-mini-split-heat-pump-prefab-home-canada-1600x1600.webp 1600w"
               sizes="(max-width: 979px) 100vw, 50vw">
             <img
-              src="/assets/images/addons/prefab-addon-senville-mini-split-800x800.webp"
+              src="/assets/images/addons/senville-12000-btu-mini-split-heat-pump-prefab-home-canada-800x800.webp"
               width="800" height="800"
-              alt="Senville 12,000 BTU mini-split heat pump"
+              alt="Senville 12,000 BTU mini-split heat pump installed in a modern prefab home in Canada"
               loading="lazy" decoding="async">
           </picture>
         </figure>
@@ -1103,13 +1103,13 @@
         <figure class="card-media">
           <picture>
             <source type="image/webp"
-              srcset="/assets/images/addons/prefab-addon-costway-mini-split-800x800.webp 800w,
-                      /assets/images/addons/prefab-addon-costway-mini-split-1600x1600.webp 1600w"
+              srcset="/assets/images/addons/costway-12000-btu-mini-split-heat-pump-prefab-home-canada-800x800.webp 800w,
+                      /assets/images/addons/costway-12000-btu-mini-split-heat-pump-prefab-home-canada-1600x1600.webp 1600w"
               sizes="(max-width: 979px) 100vw, 50vw">
             <img
-              src="/assets/images/addons/prefab-addon-costway-mini-split-800x800.webp"
+              src="/assets/images/addons/costway-12000-btu-mini-split-heat-pump-prefab-home-canada-800x800.webp"
               width="800" height="800"
-              alt="COSTWAY 12,000 BTU mini-split air conditioner"
+              alt="COSTWAY 12,000 BTU mini-split heat pump system for a prefab home in Canada"
               loading="lazy" decoding="async">
           </picture>
         </figure>
@@ -1135,13 +1135,13 @@
         <figure class="card-media">
           <picture>
             <source type="image/webp"
-              srcset="/assets/images/addons/prefab-addon-water-transfer-pump-800x800.webp 800w,
-                      /assets/images/addons/prefab-addon-water-transfer-pump-1600x1600.webp 1600w"
+              srcset="/assets/images/addons/portable-electric-water-transfer-pump-garden-hose-prefab-home-canada-800x800.webp 800w,
+                      /assets/images/addons/portable-electric-water-transfer-pump-garden-hose-prefab-home-canada-1600x1600.webp 1600w"
               sizes="(max-width: 979px) 100vw, 50vw">
             <img
-              src="/assets/images/addons/prefab-addon-water-transfer-pump-800x800.webp"
+              src="/assets/images/addons/portable-electric-water-transfer-pump-garden-hose-prefab-home-canada-800x800.webp"
               width="800" height="800"
-              alt="Portable electric water transfer pump for a temporary prefab setup"
+              alt="Portable electric water transfer pump with garden hose for temporary water setup at a prefab home in Canada"
               loading="lazy" decoding="async">
           </picture>
         </figure>
@@ -1167,13 +1167,13 @@
         <figure class="card-media">
           <picture>
             <source type="image/webp"
-              srcset="/assets/images/addons/prefab-addon-ecoflow-solar-panel-800x800.webp 800w,
-                      /assets/images/addons/prefab-addon-ecoflow-solar-panel-1600x1600.webp 1600w"
+              srcset="/assets/images/addons/ecoflow-adjustable-waterproof-portable-solar-panel-prefab-home-canada-800x800.webp 800w,
+                      /assets/images/addons/ecoflow-adjustable-waterproof-portable-solar-panel-prefab-home-canada-1600x1600.webp 1600w"
               sizes="(max-width: 979px) 100vw, 50vw">
             <img
-              src="/assets/images/addons/prefab-addon-ecoflow-solar-panel-800x800.webp"
+              src="/assets/images/addons/ecoflow-adjustable-waterproof-portable-solar-panel-prefab-home-canada-800x800.webp"
               width="800" height="800"
-              alt="EcoFlow adjustable waterproof solar panel"
+              alt="EcoFlow adjustable waterproof portable solar panel beside a prefab home in Canada"
               loading="lazy" decoding="async">
           </picture>
         </figure>
@@ -1199,13 +1199,13 @@
         <figure class="card-media">
           <picture>
             <source type="image/webp"
-              srcset="/assets/images/addons/prefab-addon-ecoflow-delta-pro-800x800.webp 800w,
-                      /assets/images/addons/prefab-addon-ecoflow-delta-pro-1600x1600.webp 1600w"
+              srcset="/assets/images/addons/ecoflow-delta-pro-high-capacity-portable-power-station-off-grid-prefab-cabin-canada-800x800.webp 800w,
+                      /assets/images/addons/ecoflow-delta-pro-high-capacity-portable-power-station-off-grid-prefab-cabin-canada-1600x1600.webp 1600w"
               sizes="(max-width: 979px) 100vw, 100vw">
             <img
-              src="/assets/images/addons/prefab-addon-ecoflow-delta-pro-800x800.webp"
+              src="/assets/images/addons/ecoflow-delta-pro-high-capacity-portable-power-station-off-grid-prefab-cabin-canada-800x800.webp"
               width="800" height="800"
-              alt="EcoFlow DELTA Pro high-capacity power station for backup power"
+              alt="EcoFlow DELTA Pro high-capacity portable power station for off-grid prefab cabin backup power in Canada"
               loading="lazy" decoding="async">
           </picture>
         </figure>
