--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -293,27 +293,31 @@
   <div class="wrap">
     <div class="card" style="text-align:center;">
       <h2>What Happens When You Buy a House on Amazon?</h2>
+
       <p class="small" style="max-width:720px;margin:0 auto 18px;">
         This viral example shows what many buyers experience with foldable and expandable prefab homes.
         Watch this before comparing the 7 options below.
       </p>
 
       <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;border-radius:18px;">
-        <iframe 
-          src="https://www.youtube.com/embed/53vIAXNBc6g"
+        <iframe
+          src="https://www.youtube.com/embed/53vIAXNBc6g?rel=0&modestbranding=1&playsinline=1"
           title="I Bought a House on Amazon"
+          loading="lazy"
           style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen>
         </iframe>
       </div>
+
+      <p class="small" style="max-width:900px;margin:14px auto 0;opacity:.92;">
+        Reality check: Most Amazon prefab homes arrive as a structure, not a finished, code-approved Canadian dwelling.
+        That’s exactly what this guide helps you understand.
+      </p>
     </div>
   </div>
 </section>
-
-    <p class="small" style="margin-top:14px;">
-  Reality check: Most Amazon prefab homes arrive as a structure — not a finished, code-approved Canadian dwelling.
-  That’s exactly what this guide helps you understand.
-</p>
 
     <!-- QUICK COMPARISON TABLE -->
     <section id="comparison" class="section anchor">
