--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -1326,7 +1326,18 @@
   <footer class="site-footer" role="contentinfo">
   <div class="wrap footer-grid">
     <div class="footerBrand">
-      <strong class="footerName">PrefabHomesCanada</strong>
+      <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
+        <div class="footerBrandRow">
+          <img
+            class="footerIcon"
+            src="/assets/images/branding/phc-icon-1024.png"
+            width="28" height="28"
+            alt="PrefabHomesCanada icon"
+            loading="lazy" decoding="async">
+          <strong class="footerName">PrefabHomesCanada</strong>
+        </div>
+      </a>
+
       <p class="small footerBlurb">
         A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
       </p>
