--- a/disclosure/index.html
+++ b/disclosure/index.html
@@ -1,1 +1,153 @@
+<!doctype html>
+<html lang="en-CA">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="format-detection" content="telephone=no">
 
+  <title>Disclosure (Canada, 2026) | PrefabHomesCanada</title>
+  <meta name="description" content="Affiliate disclosure for PrefabHomesCanada. Learn how we use affiliate links, how we may earn commissions, and how we maintain editorial independence for Canadian buyers.">
+  <link rel="canonical" href="https://prefabhomescanada.github.io/disclosure/">
+
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet=-1,max-video-preview=-1">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="color-scheme" content="dark light">
+  <meta name="theme-color" content="#0b1020">
+
+  <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+
+<body>
+<a class="skip-link" href="#main">Skip to content</a>
+
+<header class="site-header">
+  <div class="wrap header-inner">
+    <a class="brand" href="/" aria-label="PrefabHomesCanada Home">
+      <img
+        src="/assets/images/branding/prefab-homes-canada-logo-horizontal.png"
+        alt="PrefabHomesCanada"
+        width="1000"
+        height="250"
+        loading="eager"
+        decoding="async">
+    </a>
+
+    <button id="menuBtn" class="btn btn-ghost" type="button"
+            aria-label="Open menu" aria-expanded="false" aria-controls="nav">
+      Menu
+    </button>
+
+    <nav class="nav" id="nav" aria-label="Primary">
+      <a href="/best-prefab-homes-canada/">Top 7</a>
+      <a href="/cost-of-prefab-home-canada/">Real Costs</a>
+      <a href="/modular-homes-canada/">Modular</a>
+      <a href="/tiny-homes-canada/">Tiny</a>
+    </nav>
+
+    <div class="header-cta">
+      <a class="btn btn-primary" href="/best-prefab-homes-canada/">See the shortlist</a>
+    </div>
+  </div>
+</header>
+
+<main id="main" class="section">
+  <div class="wrap" style="max-width:860px">
+
+    <h1>Affiliate Disclosure</h1>
+    <p class="small muted">Last updated: February 2026</p>
+
+    <div class="sep"></div>
+
+    <p>
+      PrefabHomesCanada participates in affiliate programs, including the Amazon Associates Program.
+      This means that some links on this website are affiliate links. If you click on one of these links
+      and make a purchase, we may earn a small commission at no additional cost to you.
+    </p>
+
+    <h2>Amazon Associates Disclosure</h2>
+    <div class="noteBox">
+      <p>
+        As an Amazon Associate, we earn from qualifying purchases.
+      </p>
+    </div>
+
+    <p>
+      Product prices, availability, specifications, and details can change at any time on Amazon.
+      We do our best to reflect accurate information, but the final details are always shown on the retailer’s website.
+    </p>
+
+    <h2>How Affiliate Links Work</h2>
+    <p>
+      When you click an affiliate link on this site, a tracking parameter may be added to the URL.
+      If you purchase within the tracking window, we may receive a commission from the retailer.
+      The price you pay does not increase because of this.
+    </p>
+
+    <h2>Editorial Independence</h2>
+    <p>
+      Our content is written for Canadian buyers researching expandable and modular prefab homes.
+      We focus on practical planning factors such as:
+    </p>
+
+    <ul class="specs">
+      <li>Building envelope performance (insulation, air sealing, windows)</li>
+      <li>Municipal zoning and permit considerations</li>
+      <li>Foundation and frost requirements</li>
+      <li>Electrical and plumbing compliance</li>
+      <li>Realistic installed cost planning</li>
+    </ul>
+
+    <p>
+      Affiliate relationships do not influence our evaluation of structural limitations,
+      missing documentation, or potential project risks. If a listing lacks clarity or critical
+      information, we state that directly.
+    </p>
+
+    <h2>No Professional Advice</h2>
+    <p>
+      The information on PrefabHomesCanada is for educational and informational purposes only.
+      It does not constitute legal, engineering, architectural, or financial advice.
+      Always consult qualified local professionals before purchasing or installing a prefab home.
+    </p>
+
+    <h2>Verification Responsibility</h2>
+    <p>
+      Before purchasing any prefab home or related product, you should:
+    </p>
+
+    <ul class="specs">
+      <li>Confirm zoning and occupancy rules with your municipality</li>
+      <li>Request documentation from the seller (drawings, certifications, specs)</li>
+      <li>Verify electrical approvals (CSA/UL/ETL where applicable)</li>
+      <li>Confirm insulation levels and climate suitability</li>
+      <li>Understand delivery, foundation, and installation requirements</li>
+    </ul>
+
+    <h2>Contact</h2>
+    <p>
+      If you have questions about this disclosure or how affiliate links are used on this site,
+      you may contact us via the information provided on our website.
+    </p>
+
+    <div class="sep"></div>
+
+    <p class="small muted">
+      Transparency matters. Our goal is to provide realistic, Canada-focused guidance so buyers can plan responsibly.
+    </p>
+
+  </div>
+</main>
+
+<footer class="site-footer" role="contentinfo">
+  <div class="wrap footerBottom">
+    <div class="footerLegal small">
+      <span>© <span id="y"></span> PrefabHomesCanada</span>
+      <span class="footerDot">•</span>
+      <a href="/privacy-policy/">Privacy policy</a>
+    </div>
+  </div>
+</footer>
+
+<script src="/assets/js/site.js" defer></script>
+</body>
+</html>
